--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,7 +1,7 @@
 doctype html
 html
   head
-    link(rel='stylesheet', href='/stylesheets/style.css')
     title= title
+    link(rel='stylesheet', href='/stylesheets/style.css')
   body
-    block dashboard
+    block content
